# GW_AiTool

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  chat.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: auth_guard.py  deps.py  project_deps.py  router.py
backend/app/core/: config.py  logging.py  redis.py  security.py  utils.py
backend/app/db/: __init__.py  base.py  migrations.py  session.py
backend/app/integrations/: mineru.py  openai.py
backend/app/models/: __init__.py  agent.py  audit.py  menu.py  (+18 more)
backend/tests/: conftest.py  test_admin_login_whitelist_api.py  test_admin_plugins_api.py  test_admin_skills_api.py  test_agent_commands_scanner.py  test_agent_workdir.py  test_agents_api.py  test_audit_api.py  test_auth_api.py  test_business_map_api.py  test_categories_api.py  test_chat_api.py  test_claude_guard.py  test_claude_runner.py  test_config.py  test_consultant_defense.py  test_consultant_router.py  test_consultant_search.py  test_consultant_skills.py  test_conversion_tasks_api.py  test_create_user_cli.py  test_customers_api.py  test_db.py  test_departments_sync.py  test_draft_tools.py  test_feedback_api.py  test_knowledge_fragment_api.py  test_logging_config.py  test_login_whitelist_service.py  test_marketing_map_api.py  test_menus_api.py  test_messages_api.py  test_methodology_library_api.py  test_mineru_integration.py  test_model_settings_api.py  test_office_pdf.py  test_openai_integration.py  test_organizations_api.py  test_plugins_api.py  test_plugins_scanner.py  (+37 more)
(+307 files in other folders)
