[project]
name = "goktech-agent-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "starlette>=0.41",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "claude-agent-sdk==0.2.89",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "openai>=1.0",
    "redis>=5.2",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "bcrypt<4.1",
    "fakeredis[lua]>=2.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
